已完成登陆与注册

--- a/login.html
+++ b/login.html
@@ -4,21 +4,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/login.css">
-    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <title>大事件官网-登陆/注册</title>
+
+    <link rel="stylesheet" href="./assets/css/login.css" />
+
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css" />
 </head>
 
 <body>
-    <!-- 头部logo区域 -->
+    <!-- 头部 logo 区域 -->
     <div class="layui-main">
         <img src="./assets/images/logo.png" alt="">
     </div>
 
-    <!-- 登陆区域 -->
+    <!-- 登陆/注册 区域 -->
     <div class="loginAndRegBox">
+        <div class="title-box"></div>
 
+        <!-- 登陆 -->
+        <div class="login-box">
+            <form class="layui-form" id="form_login">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id="link_reg">注册账号</a>
+                </div>
+            </form>
+        </div>
+
+
+
+        <!-- 注册 -->
+        <div class="reg-box">
+            <form class="layui-form" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码确认框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id="link_login">去登录</a>
+                </div>
+            </form>
+        </div>
     </div>
+
+
+    <script src="./assets/lib/layui/layui.all.js"></script>
+
+    <script src="./assets/lib/jquery.js"></script>
+
+    <script src="./assets/js/baseAPI.js"></script>
+
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
