--- a/index.html
+++ b/index.html
@@ -1,11 +1,115 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>后台页面</title>
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
-<body>
-    
+
+<body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+        <!-- 头部 -->
+        <div class="layui-header">
+            <div class="layui-logo">
+                <img src="./assets/images/logo.png" alt="">
+            </div>
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="javascript:;" class="userinfo">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span class="text-avatar">A</span>
+                        个人中心
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="./user/user_info.html">基本资料</a></dd>
+                        <dd><a href="./user/user_avatar.html">更改头像</a></dd>
+                        <dd><a href="./user/user_pwd.html">更改密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;" id="btnLogout">
+                        <span class="iconfont icon-tuichu"></span>退出
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- 左侧导航栏 -->
+        <div class="layui-side layui-bg-black">
+            <!-- ID部分 -->
+            <div class="layui-side-scroll">
+                <div class="userinfo">
+                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+                    <span class="text-avatar">A</span>
+                    <span id="welcome">欢迎 ***</span>
+                </div>
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <!--  ID下面  -->
+                <ul class="layui-nav layui-nav-tree" lay-shrink="all">
+                    <!-- 首页 -->
+                    <li class="layui-nav-item layui-this">
+                        <a href="/home/dashboard.html" target="fm">
+                            <span class="iconfont icon-home"></span>首页
+                        </a>
+                    </li>
+
+                    <!-- 文章 -->
+                    <li class="layui-nav-item">
+                        <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="./article/art_cate.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
+                        </dl>
+                    </li>
+                    <!-- 个人 -->
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd>
+                                <a href="/user/user_info.html" target="fm">
+                                    <i class="layui-icon layui-icon-app"></i>基本资料
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="/user/user_avatar.html" target="fm">
+                                    <i class="layui-icon layui-icon-app"></i>更换头像
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="/user/user_pwd.html" target="fm">
+                                    <i class="layui-icon layui-icon-app"></i>重置密码
+                                </a>
+                            </dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- 内容主体区域 -->
+        <div class="layui-body">
+            <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
+        </div>
+        <!-- 底部固定区域 -->
+        <div class="layui-footer">
+            © www.xuminglong.com - 老八秘制汉堡
+        </div>
+
+    </div>
+    <!-- 导入js -->
+    <script src="./assets/lib/layui/layui.all.js"></script>
+
+    <script src="./assets/lib/jquery.js"></script>
+
+    <script src="./assets/js/baseAPI.js"></script>
+
+    <script src="./assets/js/index.js"></script>
 </body>
+
 </html>
